--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "android.arch.persistence.room:runtime:1.1.1"
     implementation 'com.github.daolq3012:AssetSQLiteOpenHelper:V1.0.1'
+    // Koin for Android Architecture ViewModel
+    implementation 'org.koin:koin-android-viewmodel:2.0.1'
+
     kapt "android.arch.persistence.room:compiler:1.1.1"
     testImplementation 'junit:junit:4.12'
     testImplementation "androidx.arch.core:core-testing:$lifecycle_version"
+    testImplementation 'org.koin:koin-test:2.0.1'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
